Modified List from inline-block to inline-flex, fixed horitzontal list item vertical align

--- a/src/partials/elements/_list.sass
+++ b/src/partials/elements/_list.sass
@@ -228,11 +228,11 @@ ol.ts.list ol li,
 //-------------------//
 
 .ts.horizontal.list 
-    display  : inline-block
-    font-size: 0em
+    display  : inline-flex
 
 .ts.horizontal.list > .item 
-    display    : inline-block
+    display    : inline-flex
+    align-items: center
     margin-left: $list_horizontalSpacing
     font-size  : 1rem
 
